<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.kik-v.commons</groupId>
	<artifactId>parent</artifactId>
	<version>0.7.12-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>KIK-V Commons</name>
	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.javadoc.skip>true</maven.javadoc.skip>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
		<spring.boot.version>2.5.3</spring.boot.version>
		<junit.version>5.7.2</junit.version>
		<jena.version>4.1.0</jena.version>
	</properties>

	<parent>
		<groupId>com.ocs.cicd</groupId>
		<artifactId>parent</artifactId>
		<version>1.0.8</version>
		<relativePath />
	</parent>

	<repositories>
		<repository>
			<id>ocs-maven-release</id>
			<url>https://maven.square.opencirclesolutions.nl/releases/</url>
		</repository>
		<repository>
			<id>danubetech-maven-releases</id>
			<url>https://repo.danubetech.com/repository/maven-releases/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>ocs-maven-release</id>
			<url>https://maven.square.opencirclesolutions.nl/releases/</url>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<repository>
			<id>ocs-maven-release</id>
			<url>https://maven.square.opencirclesolutions.nl/releases/</url>
		</repository>
		<snapshotRepository>
			<id>ocs-maven-snapshot</id>
			<url>https://maven.square.opencirclesolutions.nl/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>commons</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>commons-spring</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>ds</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>ds-spring</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>gids</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.kik-v.commons</groupId>
				<artifactId>gids-spring</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<modules>
		<module>commons</module>
		<module>commons-spring</module>
		<module>ds</module>
		<module>ds-spring</module>
		<module>gids</module>
		<module>gids-spring</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<configuration>
					<suppressionFiles>
						<suppressionFile>project-suppression.xml</suppressionFile>
					</suppressionFiles>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
